# Team05_SEA-ME-WayFi

./: Doxyfile  README.md
.github/workflows/: actions.yml  documentations.yml
DistributedEmbeddedSystems/: README.md
DistributedEmbeddedSystems/digital_cluster/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.autosave  README.md  automate.sh  automate_cross.sh  automate_env.sh  automate_test.sh  autonomybar.cpp  autonomybar.h  batterydial.cpp  batterydial.h  canreader.cpp  canreader.h  customdial.cpp  customdial.h  digital_cluster  docker-compose.yaml  driving.cpp  driving.h  get_speed.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  speedometer.cpp  speedometer.cpp.autosave  speedometer.h  tempbar.cpp  tempbar.h
DistributedEmbeddedSystems/digital_cluster/include/: autonomy.h  battery.h  mainwindow.h  temperature.h
DistributedEmbeddedSystems/digital_cluster/motors/: motors.py
DistributedEmbeddedSystems/digital_cluster/src/: autonomy.cpp  battery.cpp  mainwindow.cpp  speed.cpp  temperature.cpp
DistributedEmbeddedSystems/digital_cluster/test/: autonomy.cpp  battery.cpp  speed.cpp  temperature.cpp  window.cpp
Motors/Notes/: Project_Architecture.md
arduino/: README.md  speed_sensor_monitor.ino
raspberryPi/: speed_sensor_reciver.py
services_pi/can_service/: can-manager.service  can_manager.cpp
services_pi/speed_services/speed_mqtt_cloud_service/: speed-mqtt-cloud.service  speed_mqtt_cloud.cpp
services_pi/speed_services/speed_mqtt_local_service/: speed-mqtt-local.service  speed_mqtt_local.cpp
services_pi/temperature_services/temperature_mqtt_cloud/: temperature-mqtt-cloud.service  temperature_mqtt_cloud.cpp
services_pi/temperature_services/temperature_mqtt_local/: temperature-mqtt-local.service  temperature_mqtt_local.cpp
